Upgrade to Gradle 2.7